syntax = "proto3";

package video.v1;

option go_package = "github.com/bionicotaku/kratos-template/api/video/v1;videov1";
option java_multiple_files = true;
option java_package = "video.v1";
option objc_class_prefix = "APIVideoV1";

// ErrorReason 定义视频相关的错误码。
enum ErrorReason {
  // 默认未指定错误
  VIDEO_UNSPECIFIED = 0;

  // 视频未找到
  VIDEO_NOT_FOUND = 1;

  // 视频 ID 无效
  VIDEO_ID_INVALID = 2;

  // 查询视频失败
  QUERY_VIDEO_FAILED = 3;

  // 查询超时
  QUERY_TIMEOUT = 4;
}
